# spreadsheet

./: README.md  app.py  pyproject.toml  spreadsheet.py
spreadsheet/: __init__.py  spreadsheet.py
tests/: test.py
tests/fixtures/: spreadsheet.json
